Implement responsive decorative panel system
- Add separate decorative panel for portrait orientation with sufficient width
- Maintain control panel fixed positioning with justify-self: start
- Position portrait decorative panel relative to control panel with proper spacing
- Match exact dimensions: 279px height and dynamic width calculation
- Preserve existing landscape decorative panel behavior
- Update CLAUDE.md with comprehensive architecture documentation

--- a/www/index.html
+++ b/www/index.html
@@ -109,6 +109,14 @@
             </div>
         </div>
         
+        <!-- Portrait decorative panel - positioned independently -->
+        <div class="decorative-panel-portrait">
+            <div class="screw screw-top-left"></div>
+            <div class="screw screw-top-right"></div>
+            <div class="screw screw-bottom-left"></div>
+            <div class="screw screw-bottom-right"></div>
+        </div>
+        
         <div class="crt-container">
             <div class="crt-bezel">
                 <div class="crt-screen">
